<resources>
    <string name="app_name">SmartHouse</string>
    <string name="back">返回</string>
    <string name="start_find_house">开始找房</string>
    <string name="scroll_up">向上滑动</string>
    <string name="scroll_down">向下滑动</string>
    <string name="page_one_desc_one">100%真实房源</string>
    <string name="page_one_desc_two">等你体验</string>
    <string name="page_two_desc_one">地图找房</string>
    <string name="page_two_desc_two">更容易，so easy</string>
    <string name="page_three_desc_one">赏金猎人</string>
    <string name="page_three_desc_two">全民卖房，赏金不停！</string>
    <string name="page_four_desc_one">快捷找房</string>
    <string name="page_four_desc_two">多位经纪人为你推荐，沟通更快捷</string>
    <string name="login">登录</string>
    <string name="register_account">注册账号</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="broker_login">经纪人账号登录</string>
    <string name="register">注册</string>
    <string name="act_change_pwd">修改密码</string>
    <string name="smart_house_protocol">智住网用户协议</string>
    <string name="act_main_exitapp">再次点击退出应用</string>
    <string name="act_main_home_page">首页</string>
    <string name="act_main_map_find_house">地图找房</string>
    <string name="act_main_consultant">资讯</string>
    <string name="act_main_me">我</string>
    <string name="frag_home_second_hand_house">买卖二手房</string>
    <string name="frag_home_new_house">新房</string>
    <string name="frag_home_rent_house">找租房</string>
    <string name="frag_home_find_house_artifact">找房神器</string>
    <string name="frag_home_recommend_house_source">推荐房源</string>
    <string name="frag_home_more">更多</string>
    <string name="frag_home_search_hint">输入小区名或楼盘名称</string>
    <string name="act_city_list">选择城市</string>
    <string name="frag_map_area">区域</string>
    <string name="frag_map_total_money">总价</string>
    <string name="frag_map_house_type">房型</string>
    <string name="frag_map_more">更多</string>
    <string name="frag_map_rent_money">租金</string>
    <string name="frag_map_locate">定位</string>
    <string name="frag_map_subway">地铁</string>
    <string name="frag_map_nearby">周边</string>
    <string name="frag_consultation">资讯</string>
    <string name="frag_consultation_headline">头条</string>
    <string name="frag_consultation_shopping_guide">导购</string>
    <string name="frag_consultation_q_and_a">问答</string>
    <string name="frag_consultation_more">更多&#8230;</string>
    <string name="frag_mine_back">返回</string>
    <string name="frag_mine">我的</string>
    <string name="frag_mine_be_fee_hunter">成为赏金猎人</string>
    <string name="frag_mine_msg">消息</string>
    <string name="frag_mine_house_source_i_attention">我关注的房源</string>
    <string name="frag_mine_my_proxy">帮你卖房</string>
    <string name="frag_mine_i_am_owner">我是业主</string>
    <string name="frag_mine_browse_record">浏览记录</string>
    <string name="frag_mine_my_demand">帮你找房</string>
    <string name="frag_mine_i_am_customer">我是客户</string>
    <string name="frag_mine_my_house_resources">我的房子</string>
    <string name="frag_mine_mortgage_calculator">房贷计算器</string>
    <string name="frag_mine_feedback">意见反馈</string>
    <string name="frag_mine_settings">设置</string>
    <string name="popup_update_avatar_from_camera">相机</string>
    <string name="popup_update_avatar_from_album">相册</string>
    <string name="popup_update_avatar_cancel">取消</string>
    <string name="act_search_house_artifact_hint">请设置你的购房意向，我们为你匹配最适合的专家</string>
    <string name="act_search_house_artifact_disposable">一次性</string>
    <string name="act_search_house_artifact_mortgage">按揭贷款</string>
    <string name="act_search_house_artifact_requirement">找房神器</string>
    <string name="act_search_house_artifact_budget">您的价格预算：</string>
    <string name="act_search_house_artifact_select_price">请选择价格</string>
    <string name="act_search_house_artifact_where">您想在哪里买：</string>
    <string name="act_search_house_artifact_select_area">请选择区域</string>
    <string name="act_search_house_artifact_addition">补充说点什么吧~</string>
    <string name="act_search_house_artifact_how_many_rooms">您想买几居：</string>
    <string name="act_search_house_artifact_one_room">一房</string>
    <string name="act_search_house_artifact_two_rooms">二房</string>
    <string name="act_search_house_artifact_three_rooms">三房</string>
    <string name="act_search_house_artifact_four_rooms">四房</string>
    <string name="act_search_house_month_pay">您的预计月供范围：</string>
    <string name="act_search_house_month_pay_hint">请选择月供范围</string>
    <string name="act_search_house_artifact_result_title">我要咨询</string>
    <string name="act_search_house_artifact_result_change_another">换一批</string>
    <string name="act_proxy_detail_dial">呼叫</string>
    <string name="act_proxy_detail_msg">消息</string>
    <string name="act_settings">设置</string>
    <string name="act_settings_change_pwd">修改密码</string>
    <string name="act_settings_msg_push">信息推送</string>
    <string name="act_settings_clear_cache">清除缓存</string>
    <string name="act_settings_about_us">关于我们</string>
    <string name="act_settings_common_questions">常见问题</string>
    <string name="act_settings_check_updates">检查更新</string>
    <string name="act_settings_logout">退出登录</string>
    <string name="act_feedback">意见反馈</string>
    <string name="act_feedback_hint">请输入反馈，我们将不断改进!</string>
    <string name="act_feedback_phone_hint">输入电话号码（选填）</string>
    <string name="act_my_demand">我的需求</string>
    <string name="act_my_demand_back">返回</string>
    <string name="act_my_demand_advised_house_resources">推荐房源</string>
    <string name="act_my_demand_my_buy_house">我的购房</string>
    <string name="act_my_demand_info">我的需求</string>
    <string name="act_mortgage_calculator_back">返回</string>
    <string name="act_mortgage_calculator">房贷计算器</string>
    <string name="act_my_house_resources_back">返回</string>
    <string name="act_my_house_resources">我的房源</string>
    <string name="act_my_house_resources_my_house">我的房</string>
    <string name="act_my_house_resources_see_house_detail">看房明细</string>
    <string name="act_my_house_resources_msg_changes">信息变动</string>
    <string name="act_my_house_list">我的房子</string>
    <string name="act_house_source_info_changes">信息变动</string>
    <string name="act_houses_recommended_to_me">推荐房源</string>
    <string name="act_browse_record_back">返回</string>
    <string name="act_browse_record">浏览记录</string>
    <string name="act_message_back">返回</string>
    <string name="act_message">消息</string>
    <string name="act_concern_house_back">返回</string>
    <string name="act_concern_house">我的关注</string>
    <string name="act_my_proxy_back">返回</string>
    <string name="act_my_proxy">我的委托</string>
    <string name="act_my_proxy_sell_house">帮我售房</string>
    <string name="act_my_proxy_i_buy_house">我要买房</string>
    <string name="act_my_proxy_see_my_house">查看我的房子 (已录信息)</string>
    <string name="act_second_hand_house_back">返回</string>
    <string name="act_second_hand_house_hint">试试输入楼盘名称</string>
    <string name="act_second_hand_house_list">列表</string>
    <string name="act_second_hand_house_map">地图</string>
    <string name="act_residential_transaction_history"></string>
    <string name="act_search_house_artifact">找房神器</string>
    <string name="act_search_house_artifact_back">返回</string>
    <string name="act_forget_pwd">忘记密码</string>
    <string name="act_shangjinlieren">赏金猎人</string>
    <string name="act_fill_bank_card_info">填写银行卡</string>
    <string name="act_shangjinlieren_info">赏金猎人个人中心</string>
    <string name="act_recommend_house_detail">推荐房源</string>
    <string name="act_recommend_house_list">推荐房源</string>
    <string name="act_my_bought_houses">我的购房</string>
    <string name="act_news_detail">详情</string>
    <string name="act_see_house_record">看房记录</string>
    <string name="act_proxy_sell_house">委托售房</string>
    <string name="act_i_want_buy_house">我要买房</string>
    <string name="act_about_us">关于我们</string>
    <string name="act_common_problems">常见问题</string>
    <string name="act_fee_hunter_info">赏金猎人个人中心</string>
    <string name="act_fee_hunter_my_customer">推荐客户</string>
    <string name="act_fee_hunter_recommend_house_source">推荐房源</string>
    <string name="act_fee_hunter_recommend_second_hand_house">推荐二手房</string>
    <string name="act_fee_hunter_recommend_customer">推荐客户</string>
    <string name="act_fee_hunter_progress_detail">进度详情</string>
    <string name="act_fee_hunter_recommend_house_source_list">房屋列表</string>
    <string name="act_fee_hunter_msg">赏金信息</string>
    <string name="act_fee_hunter_rule">活动规则</string>
    <string name="act_fee_hunter_wallet">钱包</string>
    <string name="act_fee_hunter_recommend_owner">推荐房源</string>
    <string name="act_nearby_detail">周边详情</string>
    <string name="act_i_am_owner">我是业主</string>
    <string-array name="loan_years_array">
        <item>1年  (12期)</item>
        <item>2年  (24期)</item>
        <item>3年  (36期)</item>
        <item>4年  (48期)</item>
        <item>5年  (60期)</item>
        <item>6年  (72期)</item>
        <item>7年  (84期)</item>
        <item>8年  (96期)</item>
        <item>9年  (108期)</item>
        <item>10年  (120期)</item>
        <item>11年  (132期)</item>
        <item>12年  (144期)</item>
        <item>13年  (156期)</item>
        <item>14年  (168期)</item>
        <item>15年  (180期)</item>
        <item>16年  (192期)</item>
        <item>17年  (204期)</item>
        <item>18年  (216期)</item>
        <item>19年  (228期)</item>
        <item>20年  (240期)</item>
        <item>21年  (252期)</item>
        <item>22年  (264期)</item>
        <item>23年  (276期)</item>
        <item>24年  (288期)</item>
        <item>25年  (300期)</item>
        <item>26年  (312期)</item>
        <item>27年  (324期)</item>
        <item>28年  (336期)</item>
        <item>29年  (348期)</item>
        <item>30年  (360期)</item>
    </string-array>
    <string name="act_court_detail">小区详情</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="day_t">天</string>
    <string name="hour">时</string>
    <string name="minutes">分</string>
    <string name="second">秒</string>
    <string name="today">今天</string>
    <string name="lastday">昨天</string>
    <string name="unknow">未知</string>
    <string name="unstart">未开始</string>
    <string name="ended">已结束</string>
    <string-array name="label_fields">
        <item>@string/year</item>
        <item>@string/month</item>
        <item>@string/day_t</item>
        <item>@string/hour</item>
        <item>@string/minutes</item>
        <item>@string/second</item>
    </string-array>
</resources>