<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eeeeee"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_app_theme" >

        <TextView
            android:id="@+id/act_login_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:drawableLeft="@drawable/ic_back"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/act_login_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:text="@string/register_account"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </FrameLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_phone" />

        <EditText
            android:id="@+id/act_login_phone_num_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="4dp"
            android:hint="@string/input_phone_num"
            android:inputType="phone"
            android:textColor="@color/color_a0a0a0"
            android:textColorHint="@color/color_a0a0a0"
            android:background="@drawable/bg_login_edt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_pwd" />

        <EditText
            android:id="@+id/act_login_pwd_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="4dp"
            android:hint="@string/input_pwd"
            android:inputType="textPassword"
            android:textColor="@color/color_a0a0a0"
            android:textColorHint="@color/color_a0a0a0"
            android:background="@drawable/bg_login_edt" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp" >

        <TextView
            android:id="@+id/act_login_forget_pwd_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical|right"
            android:text="@string/forget_pwd"
            android:textColor="@color/color_a0a0a0" />
    </FrameLayout>

    <TextView
        android:id="@+id/act_login_login_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login_btn"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/act_login_login_llt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login_broker"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_login_broker"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/broker_login"
            android:textColor="@color/color_15901b"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>